# defer

./: CMakeLists.txt  README.md  defer.cpp
include/defer/: defer.hpp
